src/style.scss
$primary: #3270ed;
$family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", "Cantarell", "Ubuntu", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
$navbar-breakpoint: 1px;
$mobile-breakpoint: 640px;

@import "node_modules/bulma/bulma";

body {
  @media screen and (max-width: $mobile-breakpoint) {
    display: flex;
    flex-direction: column-reverse;
    min-height: 100vh;
  }
}

.controls {
  display: flex;
  padding: 4px;
  background: $light;
  border: 1px solid $border-light;
  position: fixed;
  width: 100%;
  top:0;

  .mobile-metadata-toggle {
    display: none;
  }

  #mobile-metadata-controls {
    display: none;
  }

  @media screen and (max-width: $mobile-breakpoint) {
    bottom: 0;
    top: initial;
    position: fixed;
    flex-direction: row-reverse;
    flex-wrap: wrap-reverse;

    .control-buttons {
        flex-direction: row-reverse;

        &.field.has-addons {
          .control:last-child {
            margin-right: -1px;
            .button {
                border-top-right-radius: 0;
                border-bottom-right-radius: 0;
                border-top-left-radius: 4px;
                border-bottom-left-radius: 4px;
            }
          }
          .control:first-child {
            .button {
                border-top-right-radius: 4px;
                border-bottom-right-radius: 4px;
                border-top-left-radius: 0;
                border-bottom-left-radius: 0;
            }
          }
        }
    }

    #status {
      display: flex;
      justify-content: flex-end;
    }

    .mobile-metadata-toggle {
      display: flex;
      flex-basis: 100%;
      height: 0;
    }

    #mobile-metadata-controls{
      &.is-active {
        display: flex;
        padding-bottom: 0.5rem;
        flex-direction: column;
      }
    }

    .mobile-control {
      display: flex;
      align-items: center;

      .mobile-control-label {
        font-weight: bold;
        margin-right: 0.5rem;
        &:after {
          content: ":";
        }
      }
    }
  }

  & > .field {
    margin-bottom: 0;
  }

  .radio-buttons {
    list-style-type: none;

    & li {
      float: left;
      width: 128px;
      height: 2rem;
      position: relative;
      margin-right: 0;
      padding-right: 0;
    }

    & li.compact {
      width: 64px;
    }

    & label,input{
      display: block;
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
    }

    & input[type="radio"] {
      opacity: 0;
      z-index: 1;
      cursor: pointer;
    }

    & input[type="radio"]:checked + label {
      background-color: $primary;
      color: $white;
    }

    & label {
      background-color: $white;
      color: $dark;
      text-align: center;
      line-height: 2rem;
    }
  }
}

.metadata-selectors {
 @media screen and (max-width: $mobile-breakpoint) {
    display: none !important; // Override Bulma .field.is-grouped
  }
  display: initial;
}

.log-table{
  // button height + (4px padding * 2) + (1px border * 2)
  $controls-height: calc(2.5em + 8px + 2px);
  margin-top: $controls-height;
  margin-bottom: 0 !important; // Override Bulma .table:not(:last-child)

  @media screen and (max-width: $mobile-breakpoint) {
    margin-bottom: $controls-height !important; // Override Bulma .table:not(:last-child)
    margin-top: 0;
  }
}

#status {
  margin: .5em 4px;
  flex-grow: 1;
}

.plain-log-entry {
  text-align: center;
  font-family: $family-sans-serif;
}

.button > .icon {
  pointer-events: none;
}

